[package]
name = "pong-royale"
version = "0.1.0"
edition = "2018" #todo up to 2021

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
]

web = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_webgl2",
    "bevy_networking_turbulence/use-webrtc"
]

headless = []

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_webgl2 = { version = "0.5", optional = true }
#crystalorb-bevy-networking-turbulence = "0.2.1"
bevy_networking_turbulence = "0.3.3"

serde_json = "*"
serde = { version = "*", features = ["derive"] }

cfg-if = "1.0.0"
#log = "*"
#env_logger = "0.9.0"
