[package]
name = "pong-royale"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]

members = [
    "bevy_ws",
]

#[features]

#headless = [
##    "bevy_networking_turbulence/use-webrtc",
#]


[dependencies]
bevy = { version = "0.7"}
#bevy_webgl2 = { version = "0.5", optional = true }
#bevy_egui = "0.13"
#bevy_console = { path = "../bevy_console", default-features = false }
#bevy_console = "0.3"
bevy_ws = { path = "bevy_ws", default-features = false }
rand = "0.8"
lazy_static = "1.4"
uuid = { version = "1.0.0", features = ["v4"] }
pathfinding = "3.0.12"

#crystalorb-bevy-networking-turbulence = "0.2.1"
#bevy_networking_turbulence = { version = "0.3.3", default-features = false }

serde_json = "*"
serde = { version = "*", features = ["derive"] }
log = "*"
env_logger = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"

cfg-if = "1.0.0"
#log = "*"
#env_logger = "0.9.0"

[profile.dev]
opt-level = 1
